prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_function_literal.diag.txt
ERROR: expression of type 'function' cannot be assigned to type 'int'
testData/diagnostics/compilation_errors/type_inference/test_function_literal.nut:2:0

// EXPECTED: compile-time error - lambda assigned to int variable
local x: int = @() 42
^--------------------
return x


